@@ -1,18 +1,20 @@
-## Getting Started
+## Mini-projects
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+Code used to automatically setup on amazon EC2 instance
 
-## Folder Structure
+Install openjdk 19
+```
+sudo yum install java
+```
 
-The workspace contains two folders by default, where:
+Compile the classes first
+```
+javac -d bin src/student/*
+```
 
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
-
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
-
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
-
-## Dependency Management
-
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
+Then run the program
+```
+java --enable-preview -cp /home/phonston/Documents/EE4221/Assignment_1/hw1/bin student.ServerDDDDDDDD
+or
+java --enable-preview -cp /home/phonston/Documents/EE4221/Assignment_1/hw1/bin student.ClientDDDDDDDD
+```
